package com.mikaservices.platform.common.enums

enum class GraviteNonConformite {
    MINEURE,
    MAJEURE,
    CRITIQUE,
    BLOQUANTE
}
