package com.mikaservices.platform.common.enums

enum class StatutControleQualite {
    PLANIFIE,
    EN_COURS,
    CONFORME,
    NON_CONFORME,
    ANNULE
}
