package com.mikaservices.platform.common.enums

enum class StatutNonConformite {
    OUVERTE,
    EN_TRAITEMENT,
    ACTION_CORRECTIVE,
    VERIFIEE,
    CLOTUREE
}
