package com.mikaservices.platform.common.enums

enum class TypeControle {
    RECEPTION_MATERIAUX,
    EN_COURS_EXECUTION,
    OUVRAGE_TERMINE,
    SECURITE,
    ENVIRONNEMENTAL,
    DOCUMENTAIRE,
    AUDIT_INTERNE,
    AUDIT_EXTERNE
}
